# SaturnRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/bobject/: material.h
include/graphics/: basePass.h  bloomFFT.h  deferedShading.h  deferred.h  forwardPass.h  gbufferPass.h  ouputPass.h  prezPass.h  rayTracingPass.h  skyboxPass.h  ssrPass.h  temporalPass.h
include/object/: camera.h  sObject.h
include/renderer/: IrradianceCube.h  command.h  control.h  descriptor.h  graphicCommand.h  pipeline.h  readFrameBuffer.h  renderer.h  sceneGraph.h  shadowMapPass.h  ssaoPass.h  texture.h  uiRender.h  vertexDescriptions.h
include/utils/: loadasset.h  loadshader.h
libs/Debug/: bobject.lib  graphics.lib  zlibd.exp  zlibd.lib  zlibstaticd.lib
libs/Release/: bObject.lib  render.lib  vk_base.lib
libs/jpeg/: jpeg.lib  libjpeg.so.62
shader/base/: textoverlay.frag  textoverlay.frag.spv
shader/common/: generate-spirv.bat
shader/computeshader/: emboss.comp.spv  gaussianBlur.comp  gaussianBlur.comp.spv  generate-spirv.bat
shader/deferredShading/: deferredShading.frag  deferredShading.frag.spv  generate-spirv.bat
shader/gbuffer/: gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  generate-spirv.bat
shader/onlydepth/: depth.vert  generate-spirv.bat
shader/output/: generate-spirv.bat  output.frag  output.frag.spv
shader/pbrbasic/: fullscreen.frag  fullscreen.frag.spv  generate-spirv.bat  ibl.glsl  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbrNoTex.frag  pbrNoTex.frag.spv  shadow.glsl  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
shader/rayTracing/: generate-spirv.bat  ray.frag  ray.frag.spv
shader/shadowmapping/: depth.vert.spv
shader/ssao/: composition.frag  composition.frag.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  generate-spirv.bat  ssao.frag  ssao.frag.spv
shader/ssr/: generate-spirv.bat  rayMaching.glsl  ssr.frag  ssr.frag.spv
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/bobject/: CMakeLists.txt  material.cpp
src/graphics/: CMakeLists.txt  basePass.cpp  bloomFFT.cpp  deferedShading.cpp  deferred.cpp  forwardPass.cpp  gbufferPass.cpp  outputPass.cpp  prezPass.cpp  rayTracingPass.cpp  skyboxPass.cpp  ssrPass.cpp  temporalPass.cpp
src/object/: CMakeLists.txt  camera.cpp  material.cpp  sObject.cpp
src/render/: CMakeLists.txt  IrradianceCube.cpp  command.cpp  control.cpp  descriptor.cpp  graphicCommand.cpp  loadshader.cpp  pipeline.cpp  readFrameBuffer.cpp  renderer.cpp  sceneGraph.cpp  shadowMapPass.cpp  ssaoPass.cpp  texture.cpp  uiRender.cpp  vertexDescriptions.cpp
src/vk/: CMakeLists.txt
src/vk_base/: CMakeLists.txt  VulkanUIOverlay.cpp  VulkanUIOverlay.h  camera.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
